--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "eschootwo",
+  "name": "eschool",
   "version": "0.0.0",
   "private": true,
   "type": "module",
@@ -9,11 +9,19 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "gh-pages": "^6.1.1",
-    "vue": "^3.4.29"
+    "@fortawesome/vue-fontawesome": "^3.0.8",
+    "axios": "^1.7.5",
+    "bootstrap": "^5.3.3",
+    "bootstrap-vue": "^2.23.1",
+    "mdb-vue-ui-kit": "^5.0.0",
+    "vue": "^3.4.29",
+    "vue-router": "^4.4.3"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.0.5",
+    "autoprefixer": "^10.4.20",
+    "postcss": "^8.4.41",
+    "tailwindcss": "^3.4.10",
     "vite": "^5.3.1"
   }
 }
